course dates: adjust button size, fix alignment of selection list and use red color instead of underline when selecting, fixes #8586

--- a/public/assets/stylesheets/less/forms.less
+++ b/public/assets/stylesheets/less/forms.less
@@ -257,10 +257,11 @@ form.default {
         .flex();
 
         > * {
-            .flex-item(1, 1, 100%);
+            .flex-item(1);
+            max-width: none;
         }
         button {
-            .flex-item(1, 0, auto);
+            .flex-item(0, 0, auto);
             margin: 0;
         }
     }
