--- a/public/assets/stylesheets/style.css
+++ b/public/assets/stylesheets/style.css
@@ -1427,17 +1427,18 @@ form.default label.packed {
 }
 form.default label.packed > * {
   -webkit-box-flex: 1;
-  -webkit-flex: 1 1 100%;
-  -ms-flex: 1 1 100%;
+  -webkit-flex: 1;
+  -ms-flex: 1;
   -moz-box-flex: 1;
-  flex: 1 1 100%;
+  flex: 1;
+  max-width: none;
 }
 form.default label.packed button {
-  -webkit-box-flex: 1;
-  -webkit-flex: 1 0 auto;
-  -ms-flex: 1 0 auto;
-  -moz-box-flex: 1;
-  flex: 1 0 auto;
+  -webkit-box-flex: 0;
+  -webkit-flex: 0 0 auto;
+  -ms-flex: 0 0 auto;
+  -moz-box-flex: 0;
+  flex: 0 0 auto;
   margin: 0;
 }
 .studip-checkbox {
@@ -3783,6 +3784,7 @@ html.no-js:not(.csstransforms) .action-menu:hover .action-menu-icon {
 }
 .studip-selection li {
   display: inline-block;
+  vertical-align: top;
 }
 .studip-selection li:not(.empty-placeholder) {
   color: #28497c;
@@ -3879,7 +3881,7 @@ html.no-js:not(.csstransforms) .action-menu:hover .action-menu-icon {
 }
 .studip-selection .studip-selection-selected li:hover .studip-selection-label,
 .studip-selection .studip-selection-selectable li:hover .studip-selection-label {
-  text-decoration: underline;
+  color: #d60000;
 }
 article.studip {
   border-color: #d0d7e3;
